code changes to get to near final state other than icons

--- a/podsrc/_includes/navigation.html
+++ b/podsrc/_includes/navigation.html
@@ -1,8 +1,9 @@
 <nav>
     <ul>
-        <li><a href="{{ site.baseurl }}/index.html">Home</a></li>
-        <li><a href=".">iTunes</a></li>
-        <li><a href=".">Spotify</a></li>
+        <li><a href="{{ site.baseurl }}/about.html">About</a></li>
+        <li><a href="{{ site.baseurl }}/index.html">Episodes</a></li>
+        <li><a href="{{ site.baseurl }}/comingsoon.html">iTunes</a></li>
+        <li><a href="{{ site.baseurl }}/comingsoon.html">Spotify</a></li>
         <li><a href="{{ site.baseurl }}/podcast.xml">RSS</a></li>
     </ul> 
 </nav>
