--- a/podsrc/_sass/base/_structure.scss
+++ b/podsrc/_sass/base/_structure.scss
@@ -2,6 +2,7 @@
     display:flex;
     flex-direction: column;
     min-height: 30vh;
+    background-color: $qk-color;
 }
 
 header {
@@ -12,6 +13,7 @@ header {
     justify-content: center;
     align-items: center;
     text-align: center;
+    overflow: hidden;
 }
 
 header a {
@@ -30,7 +32,9 @@ header a:hover {
 
 .logo {
     padding: 0px;
-    height: 100%;    
+    max-height: 30vh;
+    max-width: 100vw;
+    // width: 100%;
     // height: 30vh;    
 }
 
