--- a/podsrc/_sass/base/_variables.scss
+++ b/podsrc/_sass/base/_variables.scss
@@ -9,18 +9,23 @@ $bp-larger-than-desktop   : "min-width: 1000px" !default;
 $bp-larger-than-desktophd : "min-width: 1200px" !default;
 
 // Colors
-$light-grey: rgba(241,241,241,1) !default;
+$qk-color: #B7B3FD;
+$light-grey: #B7B3FD !default;
 $lighter-grey: lighten($light-grey, 10%) !default;
-$dark-grey: rgba(51,51,51,1) !default;
-$primary-color: rgba(255,83,13,1) !default;
+$dark-grey: #B7B3FD !default;
+$primary-color: darken($qk-color, 20%) !default;
 $secondary-color: rgba(63,87,101,1) !default;
-$border-color: #bbb !default;
-$link-color: rgba(255,83,13,1) !default;
+$border-color: #B7B3FD !default;
+$link-color: #7171ff !default;
 $font-color: rgba(51,51,51,1) !default;
-$header-color: rgba(255,255,255,0.85);
+$header-color: #B7B3FD;
 $header-color-link: rgba(255,255,255,1);
 $drop-shadow: rgba(0,0,0,0.4) !default;
 $footer-color: rgba(255,255,255,0.75);
+$box-color: lighten($qk-color, 5%);
+$lighter-box-color: lighten($box-color, 5%);
+$darker-box-color: darken($box-color, 10%);
+$darkest-box-color: darken($box-color, 15%);
 
 // Typography
 $font-family: "Lato", Helvetica, Arial, sans-serif !default;
