--- a/podsrc/_sass/modules/_cards.scss
+++ b/podsrc/_sass/modules/_cards.scss
@@ -18,8 +18,8 @@
 //            max-width: 50%;    
 // for 2up    width: 44%;
     width: 100%;
-    background: rgba(240,240,240,1);
-    padding: 1em;
+    background: $box-color; // from _variables.scss
+    padding: 2em;
     margin: 0.5em;
     box-shadow: 0px 1em 1em 0px rgba(0,0,0,0.1); 
 }
@@ -29,7 +29,7 @@
 }
 
 .cards:hover {
-    background: #fff;
+    background: $lighter-box-color;
     box-shadow: 0px 1em 2em 0.5em rgba(0,0,0,0.2); 
     transition: .3s ease-out;
 }
@@ -38,16 +38,16 @@
     max-width: 100%;
     width: 100%;
     border-bottom: 1em solid $primary-color;
-    background: $secondary-color;
+    background: $darker-box-color;
     color: #fff;
 }
 
 .first a {
-    color: #fff !important;
+    color: #fff;
 }
 
 .first a:hover {
-    color: $primary-color !important;
+    color: #ccc;
 }
 
 .first h2 {
@@ -57,6 +57,6 @@
 .first:hover {
     max-width: 100%;
     width: 100%;
-    background: darken($secondary-color, 10%) ;
+    background: $darkest-box-color;
     color: #fff;
 }
