--- a/podsrc/_includes/header.html
+++ b/podsrc/_includes/header.html
@@ -1,6 +1,7 @@
 <header>
         <!-- <div class="logo"><a href="{{ site.baseurl}}/index.html"><img src="{{ site.baseurl }}/images/queerkahani_mainpage.jpg" height="100%"><h1 class="hidden">{{ site.title }}</h1></a></div> -->
-        <div class="logo"><a href="https://queerkahani.com"><img src="{{ site.baseurl }}/images/queerkahani_mainpage.jpg" class="logo"><div class="hidden">{{ site.title }}</div></a></div>
+        <!-- <div class="logo"><a href="https://queerkahani.com"><img src="{{ site.baseurl }}/images/queerkahani_mainpage.jpg" class="logo"><div class="hidden">{{ site.title }}</div></a></div> -->
+        <div class="logo"><a href="https://queerkahani.com"><img src="{{ site.baseurl }}/images/queer_kahani_podcast_banner.png" class="logo"><div class="hidden">{{ site.title }}</div></a></div>
         <!-- <h1>foo is a bar is a foo</h1> -->
 </header>
 
