--- a/podsrc/_includes/head.html
+++ b/podsrc/_includes/head.html
@@ -34,7 +34,7 @@
   <meta property="og:image" content="https://queerkahani.com/podcast/images/queer_kahani_podcast_logo.png" />
   <meta property="og:image:width" content="2000"/>
   <meta property="og:image:height" content="2000"/>
-  <meta property="og:description" content="Queer Kahani is a quirky and queer podcast of bite-sized queer stories told in an interactive interview format." />
+  <meta property="og:description" content="{{ site.description }}" />
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-0C8P6FRLYD"></script>
