--- a/podsrc/_includes/navigation.html
+++ b/podsrc/_includes/navigation.html
@@ -3,7 +3,7 @@
         <li><a href="{{ site.baseurl }}/about.html">About</a></li>
         <li><a href="{{ site.baseurl }}/index.html">Episodes</a></li>
         <li><a href="{{ site.baseurl }}/comingsoon.html">iTunes</a></li>
-        <li><a href="{{ site.baseurl }}/comingsoon.html">Spotify</a></li>
+        <li><a href="https://open.spotify.com/show/5KajSwW2E4ilqF486Z508M?si=70d7df0bc8a84f11">Spotify</a></li>
         <li><a href="{{ site.baseurl }}/podcast.xml">RSS</a></li>
     </ul> 
 </nav>
