--- a/podsrc/_includes/head.html
+++ b/podsrc/_includes/head.html
@@ -4,7 +4,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  <!-- <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}"> -->
+  <meta name="description" content="{{ site.title }} - {{ page.title }} - {{ page.summary }}">
     
 
   <!-- Style Sheets --> 
@@ -25,16 +26,19 @@
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@sumutasib" />
+  <meta name="twitter:site" content="{{ site.url }}" />
   <meta name="twitter:title" content="{{ page.title }}" />
   <meta name="twitter:description" content="{{ page.summary }}" />
   <meta name="twitter:image" content="{{ site.url }}{{ site.baseurl }}/images/itunes.png" /> 
   
   <!-- Facebook -->
   <meta property="og:image" content="https://queerkahani.com/podcast/images/queer_kahani_podcast_banner.png" />
-  <meta property="og:image:width" content="2000"/>
-  <meta property="og:image:height" content="2000"/>
-  <meta property="og:description" content="{{ site.description }}" />
+  <meta property="og:image:width" content="2101"/>
+  <meta property="og:image:height" content="1183"/>
+  <meta property="og:url" content="{{ site.url }}{{ site.baseurl }}{{ page.url }}" />
+  <meta property="og:title" content="{{ page.title }}" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="{{ page.summary }}" />
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-0C8P6FRLYD"></script>
