bug fixes and adding actual feeds instead of placeholders

--- a/podsrc/_includes/footer.html
+++ b/podsrc/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
 
 <div class="container">
-    <p>Subscribe <a href="{{ "/podcast.xml" | prepend: site.baseurl }}">via RSS</a>, <a href="{{ site.baseurl }}/comingsoon.html">iTunes</a>, or <a href="{{ site.baseurl }}/comingsoon.html">Spotify</a> | {{ site.title }} is <a href="{{ "/about.html" | prepend: site.baseurl }}"> built with Jekyll</a> | Licensed under CC-BY</p>
+    <p>Subscribe <a href="{{ "/podcast.xml" | prepend: site.baseurl }}">via RSS</a>, <a href="https://podcasts.apple.com/us/podcast/queer-kahani/id1602311754">iTunes</a>, or <a href="https://open.spotify.com/show/5KajSwW2E4ilqF486Z508M?si=70d7df0bc8a84f11">Spotify</a> | {{ site.title }} is <a href="{{ "/about.html" | prepend: site.baseurl }}"> built with Jekyll</a> | Licensed under CC-BY</p>
 </div>    
 
 </footer>
