--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4317,10 +4317,12 @@ div.WordSection1 {
 	font-family:"Georgia",serif;
 	font-size: 125%;
 	color: #000;
-	padding-top: 10%;
-	padding-left: 10%;
-	padding-right: 10%;
-	padding-bottom: 10%;
+	padding-top: 15%;
+	padding-left: 15%;
+	padding-right: 15%;
+	padding-bottom: 15%;
+	visibility: hidden;
+	/* display: none; */
 }
 
 p.MsoTitle {
@@ -4328,4 +4330,20 @@ p.MsoTitle {
 	color: #449;
 	font-size: 250%;
 	margin-bottom: 10%;
+	/* margin-top: 10%; */
+}
+
+/* floating dialog box */
+.dialog-box {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: #fff;
+	padding: 20px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+	z-index: 9999;
+	text-align: center;
+	/* add a drop shadow */
+	-webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
 }
